test: commit the headless look-and-feel harness (#32)
The unit tests only ever saw stub look and feels. Every bug this module
has had — #14, #17, #19, #22, #23 — lives in what three real look and
feels do to each other, and every one of them was found by deploying a
gateway, launching a Designer and looking at it.

They all reproduce headlessly. `./gradlew :designer:lafHarness` installs
the Designer's own stock look and feel (Synthetica through
IgnitionLookAndFeel$LaF, with JIDE's extension over it), drives
ThemeManager's real switch sequence, and diffs every resolvable
UIManager default across a light->dark->light cycle. Two seconds, no
gateway, no Designer, no screenshots.

Four invariants, each one a bug that has already happened:

- a full cycle returns every resolvable default to its stock value (#23);
- the FlatLaf overrides are cleared while FlatLaf is still installed,
  not after the stock look and feel returns (#23);
- repeated cycles converge rather than drifting;
- JIDE's Theme.painter map comes back to the Synthetica entries
  (#14, #19).

Reintroducing #23's ordering fails three of the five tests, with 1297 of
1740 defaults left null and the painter map left empty — which is the
check the harness has to pass to be worth committing.

ThemeManager needed three seams, no restructuring: apply() is
package-visible (it never touched DesignerContext), the stock-look-and-feel
capture is its own method, and the phase order is recorded so the #23
ordering can be asserted directly rather than only through its
consequences.

One documented exception to the restore invariant: UIDefaults caches each
UI delegate class it resolves back into the developer defaults under the
class's own name, where it survives a look-and-feel swap. A first dark
cycle leaves FlatLabelUI and FlatPanelUI entries behind for good; a stock
Designer already carries three Synthetica ones before this module runs,
and the second cycle adds none. Recognised in the test rather than
filtered out of t